RESOLVED FIXED40423
Fix invalid access to non-static data member warning in JITPropertyAccess32_64 on ARM
https://bugs.webkit.org/show_bug.cgi?id=40423
Summary Fix invalid access to non-static data member warning in JITPropertyAccess32_6...
Gabor Loki
Reported 2010-06-10 06:30:19 PDT
The offsetof(struct JITStackFrame, args[2]) expression cause an invalid access to non-static data member 'JSC::JITStackFrame::args' of NULL object warning. Using OBJECT_OFFSETOF macro instead of objectof one will fix this issue.
Attachments
Fix invalid access to non-static data member warning in JITPropertyAccess32_64 (2.22 KB, patch)
2010-06-10 06:32 PDT, Gabor Loki
eric: review+
Gabor Loki
Comment 1 2010-06-10 06:32:40 PDT
Created attachment 58372 [details] Fix invalid access to non-static data member warning in JITPropertyAccess32_64
Eric Seidel (no email)
Comment 2 2010-06-12 18:52:04 PDT
Comment on attachment 58372 [details] Fix invalid access to non-static data member warning in JITPropertyAccess32_64 rs=me.
Eric Seidel (no email)
Comment 3 2010-06-12 18:52:19 PDT
Is this testable?
Gabor Loki
Comment 4 2010-06-15 02:07:54 PDT
What do you mean? With a layout test? It is already tested in jscore tests. Just turn on WTF_USE_JSVALUE32_64 if it is not enabled by default (like on ARM).
Gabor Loki
Comment 5 2010-06-15 02:14:43 PDT
Committed revision 61180.
Note You need to log in before you can comment on or make changes to this bug.