Fix invalid access to non-static data member warning in JITPropertyAccess32_64 on ARM https://bugs.webkit.org/show_bug.cgi?id=40423

Rubber-stamped by Eric Seidel.

Using OBJECT_OFFSETOF macro instead of objectof to bypass access to
non-static data member warning.

* jit/JITPropertyAccess32_64.cpp:
(JSC::JIT::privateCompilePutByIdTransition):



Canonical link: https://commits.webkit.org/52190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61180 268f45cc-cd09-0410-ab3c-d52691b4dbfc